# FilesCpp-2

./: .gitignore
Apunes/: exam1.cpp
Apuntes/: exam1.cpp  exam2.cpp  exam3.cpp  exam4.cpp  exam6.cpp  exam7.cpp  exam8.cpp  exam9.cpp
PC/: p1.cpp  p2.cpp
PC2/: p1.cpp  p2.cpp  p3.cpp
PC3/: p1.cpp  p2.cpp  p4.txt
Tarea1/: matrix.cpp  number.h
Tarea2/: P1.cpp  P1.h  P10.cpp  P10.h  P2.cpp  P2.h  P3.cpp  P3.h  P4.cpp  P4.h  P5.cpp  P5.h  P6.cpp  P6.h  P7.cpp  P7.h  P8.cpp  P8.h  P9.cpp  P9.h
Tarea3/: CMakeLists.txt  P1.cpp  P1.h  P2.cpp  P2.h  P3.cpp  P3.h  P4.cpp  P4.h  P5.cpp  P5.h  P6.cpp  P6.h  data1.txt  p7.cpp  p7.h  p8.cpp  p8.h  p9.cpp  p9.h
Tarea4/: input.txt  sp4.cpp  sp4.h
Tarea5/: P1.h  P2.h  P3.h  P4.h  prueba.cpp
Tarea6/: P1.cpp  P1.h  P2.cpp  P2.h  P3.cpp  P3.h  P4.cpp  P4.h  P5.cpp  P5.h  P6.cpp  P6.h  result.cpp
Traea1/: main.cpp  matrix.h  number.cpp
untitled/: CMakeLists.txt  main.cpp  main2.cpp
